          not return a value.
        - Fixed dependency issue in the org.restlet.example.pom. 
          Reported by Marcelo Ochoa.
        - ServerServlet ignores client connectors that are now available.
        - Fixed issue with annotation inheritance. 
          Contributed by Tal Liron.
        - Fixed bug causing Engine to be instantiated several time.
          Reported by David Fogel. 
    - Enhancements
        - Servlet's UserPrincipal is now transferred into Restlet's
          ClientInfo#subject property. Suggested by Paul Davis.
        - Updated Media type RDF N3 from "text/rdf+n3" to "text/n3". 
          Suggested by Simon Reinhardt.
        - Added support of the parsing and writing of RDF documents 
          expressed in N-Triples notation.
        - Added support of the parsing and writing of RDF documents 
          expressed in Turtle notation.
    - API changes
        - RepresentationInfo is now concrete and has more constructors.
          Suggested by Lars Heuer.
        - UniformResource#init() now throws ResourceException and 
          catches it to update the response. Suggested by Lars Heuer.
        - Renamed UniformResource#init() into doInit().
        - Renamed UniformResource#destroy() into release().
        - Added an UniformResource#doRelease() method.
        - ClientResource now overrides finalize() to call the release()
          method.
        - Connector#isAvailable() method added to test the presence
          of the underlying connector helper.
    - Miscellaneous
        - Component XML configuration has been moved into an Engine 
          ComponentXmlParser class.

- 1.2 Milestone 2 (2009-04-01)
    - Breaking changes
        - Finder#createTarget() methods are now all protected. The 
          findTarget() method is now public. Suggested by Leigh Klotz.
        - All core representation classes have been moved from the
          "org.restlet.resource" package into a new 